# n-bodies

./: CMakeLists.txt  Makefile  README.md
data/: earth_moon.txt
include/: body.hpp  config_loader.hpp  math_utils.hpp  output.hpp
output/: earth_moon.csv  solar_system.csv
scripts/: plot_output.py
src/: main.cpp  output.cpp
src/body/: body.cpp
src/config/: config_loader.cpp
tests/: body_test.cpp  config_loader_test.cpp  euler_integrator_test.cpp  math_test.cpp  output_test.cpp  simulation_test.cpp
